add single column layout

--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
   <title>Basic Gallery</title>
 </head>
 <body>
-
+  <div class="container">
+    <div class="columns title"></div>
+    <div class="columns nav"></div>
+    <div class="columns header"></div>
+    <div class="columns wrap">
+      <div class="main">
+        <img class="gallery" src="" alt="">
+        <div class="heading"></div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde totam quae aliquam cum consequuntur, tenetur, dolor culpa! Illum, reiciendis eum ratione odio! Unde facilis accusantium maxime, praesentium vitae esse itaque odit nulla similique pariatur blanditiis eius aliquid minima nihil aliquam.</p>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
