add media query for 2 column layout

--- a/index.html
+++ b/index.html
@@ -16,6 +16,21 @@
         <div class="heading"></div>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde totam quae aliquam cum consequuntur, tenetur, dolor culpa! Illum, reiciendis eum ratione odio! Unde facilis accusantium maxime, praesentium vitae esse itaque odit nulla similique pariatur blanditiis eius aliquid minima nihil aliquam.</p>
       </div>
+      <div class="secondary">
+        <img class="gallery" src="" alt="">
+        <div class="heading"></div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde totam quae aliquam cum consequuntur, tenetur, dolor culpa! Illum, reiciendis eum ratione odio! Unde facilis accusantium maxime, praesentium vitae esse itaque odit nulla similique pariatur blanditiis eius aliquid minima nihil aliquam.</p>
+      </div>
+       <div class="secondary">
+        <img class="gallery" src="" alt="">
+        <div class="heading"></div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde totam quae aliquam cum consequuntur, tenetur, dolor culpa! Illum, reiciendis eum ratione odio! Unde facilis accusantium maxime, praesentium vitae esse itaque odit nulla similique pariatur blanditiis eius aliquid minima nihil aliquam.</p>
+      </div>
+       <div class="secondary">
+        <img class="gallery" src="" alt="">
+        <div class="heading"></div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde totam quae aliquam cum consequuntur, tenetur, dolor culpa! Illum, reiciendis eum ratione odio! Unde facilis accusantium maxime, praesentium vitae esse itaque odit nulla similique pariatur blanditiis eius aliquid minima nihil aliquam.</p>
+      </div>
     </div>
   </div>
 </body>
